syntax = "proto3";

package api.v1.common;

message Pagination {
    int32 perPage = 1;
    int32 totalPages = 2;
    int32 currentPage = 3;
    int32 total = 4;
}
